samples/_failures_safe/1761145695_84ad84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_408cd8bb.c: In function ‘main’:
./samples/SAFE/__tmp_408cd8bb.c:154:22: error: expected ‘)’ at end of input
  154 |         if (!add_edge
      |            ~         ^
      |                      )
./samples/SAFE/__tmp_408cd8bb.c:154:9: error: expected declaration or statement at end of input
  154 |         if (!add_edge
      |         ^~
./samples/SAFE/__tmp_408cd8bb.c:154:9: error: expected declaration or statement at end of input
